--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next": "15.2.1",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
+    "react-calendly": "^4.3.1",
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.3",
     "react-syntax-highlighter": "^15.6.1",
